packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-008.ttrp
// expect: TTRP-SQL-008
container c target erp_pg """sql
DECLARE @x
"""
